[gd_scene load_steps=4 format=2]

[ext_resource path="res://PauseMenu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://PoetsenOne-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=3]
size = 30
use_filter = true
font_data = ExtResource( 2 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.305882 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.5
margin_top = -137.0
margin_right = 103.5
margin_bottom = 137.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_right = 207.0
margin_bottom = 454.0
custom_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 207.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "Paused"
align = 1
valign = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 207.0
margin_bottom = 246.0
rect_min_size = Vector2( 0, 200 )

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 256.0
margin_right = 207.0
margin_bottom = 298.0
custom_fonts/font = SubResource( 3 )
text = "Resume Game"

[node name="Settings" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 308.0
margin_right = 207.0
margin_bottom = 350.0
custom_fonts/font = SubResource( 3 )
text = "Settings"

[node name="Main" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 360.0
margin_right = 207.0
margin_bottom = 402.0
custom_fonts/font = SubResource( 3 )
text = "Main Menu"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 412.0
margin_right = 207.0
margin_bottom = 454.0
custom_fonts/font = SubResource( 3 )
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Settings" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Main" to="." method="_on_Main_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
